# AutifyME

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml  release.yml
.kiro/steering/: architecture_decisions.md  credential_patterns.md
config/: credentials.example.json  database_schema.sql  llm_config.example.json
docs/: README.md
docs/architecture/: framework_design.md  tech_stack.md
docs/guides/: configuration.md  getting_started.md  troubleshooting.md
docs/overview/: whitepaper.md
docs/workflows/: cataloging_workflow.md
examples/: clean_credential_usage.py
scripts/: cleanup_dependencies.py  fix_dependencies.py  setup.py  validate_credentials.py
src/: __init__.py
src/core/: config.py  factory.py  llm_factory.py
src/core/credentials/: __init__.py  credential_manager.py  service_credentials.py
src/specialists/: __init__.py
src/specialists/content/: __init__.py  product_classifier.py
src/specialists/database/: __init__.py  database_specialist.py
src/tools/database/: __init__.py  crud_tools.py
src/tools/image/: analyzer.py
